EXPR.output
État 75 conflits: 1 décalage/réduction


Grammaire

    0 $accept: algorithm_list $end

    1 algorithm_list: algorithm_list algorithm
    2               | algorithm

    3 algorithm: TEXSCI_BEGIN '{' ID '}' variables BLANKLINE commandes TEXSCI_END

    4 variables: variables LOCAL '{' '$' variabledef '$' '}'
    5          | %empty

    6 variabledef: ID IN INTEGER
    7            | variabledef ',' ID IN INTEGER
    8            | ID IN INTEGER '^' '{' INT '}'
    9            | ID IN INTEGER '^' '{' INT MULT INT '}'

   10 commandes: commande commandes
   11          | %empty

   12 identifiant: '$' ID LEFTARROW expression '$'
   13            | '$' ID '_' '{' expression '}' LEFTARROW expression '$'
   14            | '$' ID '_' '{' expression ',' expression '}' LEFTARROW expression '$'
   15            | ID
   16            | ID '_' '{' expression '}'
   17            | ID '_' '{' expression ',' expression '}'

   18 commande: identifiant '\\' ';'
   19         | '$' MBOX '{' PRINT '(' '$' expression '$' ')' '}' '$' '\\' ';'
   20         | '$' MBOX '{' PRINTTEXT '(' '$' STRING '$' ')' '}' '$' '\\' ';'
   21         | '$' MBOX '{' PRINTLN '(' ')' '}' '$' '\\' ';'
   22         | TCC
   23         | IF '{' '$' conditions '$' '}' '{' commandes '}'
   24         | EIF '{' '$' conditions '$' '}' '{' commandes '}' '{' commandes '}'
   25         | WHILE '{' '$' conditions '$' '}' '{' commandes '}'
   26         | FOR '{' identifiant TO '$' expression '$' '}' '{' commandes '}'

   27 expression: INT
   28           | identifiant
   29           | expression PLUS expression
   30           | expression MINUS expression
   31           | MINUS expression
   32           | expression MULT expression
   33           | '(' expression ')'

   34 conditions: condition
   35           | '(' conditions ')'
   36           | NON conditions
   37           | conditions ET conditions
   38           | conditions OU conditions

   39 condition: expression
   40          | expression '=' expression
   41          | expression PLUSGRAND expression
   42          | expression PLUSPETIT expression
   43          | expression PLUSGRANDEG expression
   44          | expression PLUSPETITEG expression


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'$' (36) 4 12 13 14 19 20 21 23 24 25 26
'(' (40) 19 20 21 33 35
')' (41) 19 20 21 33 35
',' (44) 7 14 17
';' (59) 18 19 20 21
'=' (61) 40
'\\' (92) 18 19 20 21
'^' (94) 8 9
'_' (95) 13 14 16 17
'{' (123) 3 4 8 9 13 14 16 17 19 20 21 23 24 25 26
'}' (125) 3 4 8 9 13 14 16 17 19 20 21 23 24 25 26
error (256)
TEXSCI_BEGIN (258) 3
TEXSCI_END (259) 3
BLANKLINE (260) 3
MULT (261) 9 32
ID (262) 3 6 7 8 9 12 13 14 15 16 17
INT (263) 8 9 27
STRING (264) 20
IN (265) 6 7 8 9
INTEGER (266) 6 7 8 9
LOCAL (267) 4
PLUS (268) 29
MINUS (269) 30 31
IF (270) 23
EIF (271) 24
WHILE (272) 25
FOR (273) 26
TO (274) 26
TCC (275) 22
NON (276) 36
ET (277) 37
OU (278) 38
PLUSGRAND (279) 41
PLUSPETIT (280) 42
PLUSGRANDEG (281) 43
PLUSPETITEG (282) 44
LEFTARROW (283) 12 13 14
MBOX (284) 19 20 21
PRINT (285) 19
PRINTTEXT (286) 20
PRINTLN (287) 21


Non-terminaux, suivis des règles où ils apparaissent

$accept (44)
    à gauche: 0
algorithm_list (45)
    à gauche: 1 2, à droite: 0 1
algorithm (46)
    à gauche: 3, à droite: 1 2
variables (47)
    à gauche: 4 5, à droite: 3 4
variabledef (48)
    à gauche: 6 7 8 9, à droite: 4 7
commandes (49)
    à gauche: 10 11, à droite: 3 10 23 24 25 26
identifiant (50)
    à gauche: 12 13 14 15 16 17, à droite: 18 26 28
commande (51)
    à gauche: 18 19 20 21 22 23 24 25 26, à droite: 10
expression (52)
    à gauche: 27 28 29 30 31 32 33, à droite: 12 13 14 16 17 19 26
    29 30 31 32 33 39 40 41 42 43 44
conditions (53)
    à gauche: 34 35 36 37 38, à droite: 23 24 25 35 36 37 38
condition (54)
    à gauche: 39 40 41 42 43 44, à droite: 34


État 0

    0 $accept: . algorithm_list $end

    TEXSCI_BEGIN  décalage et aller à l'état 1

    algorithm_list  aller à l'état 2
    algorithm       aller à l'état 3


État 1

    3 algorithm: TEXSCI_BEGIN . '{' ID '}' variables BLANKLINE commandes TEXSCI_END

    '{'  décalage et aller à l'état 4


État 2

    0 $accept: algorithm_list . $end
    1 algorithm_list: algorithm_list . algorithm

    $end          décalage et aller à l'état 5
    TEXSCI_BEGIN  décalage et aller à l'état 1

    algorithm  aller à l'état 6


État 3

    2 algorithm_list: algorithm .

    $défaut  réduction par utilisation de la règle 2 (algorithm_list)


État 4

    3 algorithm: TEXSCI_BEGIN '{' . ID '}' variables BLANKLINE commandes TEXSCI_END

    ID  décalage et aller à l'état 7


État 5

    0 $accept: algorithm_list $end .

    $défaut  accepter


État 6

    1 algorithm_list: algorithm_list algorithm .

    $défaut  réduction par utilisation de la règle 1 (algorithm_list)


État 7

    3 algorithm: TEXSCI_BEGIN '{' ID . '}' variables BLANKLINE commandes TEXSCI_END

    '}'  décalage et aller à l'état 8


État 8

    3 algorithm: TEXSCI_BEGIN '{' ID '}' . variables BLANKLINE commandes TEXSCI_END

    $défaut  réduction par utilisation de la règle 5 (variables)

    variables  aller à l'état 9


État 9

    3 algorithm: TEXSCI_BEGIN '{' ID '}' variables . BLANKLINE commandes TEXSCI_END
    4 variables: variables . LOCAL '{' '$' variabledef '$' '}'

    BLANKLINE  décalage et aller à l'état 10
    LOCAL      décalage et aller à l'état 11


État 10

    3 algorithm: TEXSCI_BEGIN '{' ID '}' variables BLANKLINE . commandes TEXSCI_END

    ID     décalage et aller à l'état 12
    IF     décalage et aller à l'état 13
    EIF    décalage et aller à l'état 14
    WHILE  décalage et aller à l'état 15
    FOR    décalage et aller à l'état 16
    TCC    décalage et aller à l'état 17
    '$'    décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (commandes)

    commandes    aller à l'état 19
    identifiant  aller à l'état 20
    commande     aller à l'état 21


État 11

    4 variables: variables LOCAL . '{' '$' variabledef '$' '}'

    '{'  décalage et aller à l'état 22


État 12

   15 identifiant: ID .
   16            | ID . '_' '{' expression '}'
   17            | ID . '_' '{' expression ',' expression '}'

    '_'  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 15 (identifiant)


État 13

   23 commande: IF . '{' '$' conditions '$' '}' '{' commandes '}'

    '{'  décalage et aller à l'état 24


État 14

   24 commande: EIF . '{' '$' conditions '$' '}' '{' commandes '}' '{' commandes '}'

    '{'  décalage et aller à l'état 25


État 15

   25 commande: WHILE . '{' '$' conditions '$' '}' '{' commandes '}'

    '{'  décalage et aller à l'état 26


État 16

   26 commande: FOR . '{' identifiant TO '$' expression '$' '}' '{' commandes '}'

    '{'  décalage et aller à l'état 27


État 17

   22 commande: TCC .

    $défaut  réduction par utilisation de la règle 22 (commande)


État 18

   12 identifiant: '$' . ID LEFTARROW expression '$'
   13            | '$' . ID '_' '{' expression '}' LEFTARROW expression '$'
   14            | '$' . ID '_' '{' expression ',' expression '}' LEFTARROW expression '$'
   19 commande: '$' . MBOX '{' PRINT '(' '$' expression '$' ')' '}' '$' '\\' ';'
   20         | '$' . MBOX '{' PRINTTEXT '(' '$' STRING '$' ')' '}' '$' '\\' ';'
   21         | '$' . MBOX '{' PRINTLN '(' ')' '}' '$' '\\' ';'

    ID    décalage et aller à l'état 28
    MBOX  décalage et aller à l'état 29


État 19

    3 algorithm: TEXSCI_BEGIN '{' ID '}' variables BLANKLINE commandes . TEXSCI_END

    TEXSCI_END  décalage et aller à l'état 30


État 20

   18 commande: identifiant . '\\' ';'

    '\\'  décalage et aller à l'état 31


État 21

   10 commandes: commande . commandes

    ID     décalage et aller à l'état 12
    IF     décalage et aller à l'état 13
    EIF    décalage et aller à l'état 14
    WHILE  décalage et aller à l'état 15
    FOR    décalage et aller à l'état 16
    TCC    décalage et aller à l'état 17
    '$'    décalage et aller à l'état 18

    $défaut  réduction par utilisation de la règle 11 (commandes)

    commandes    aller à l'état 32
    identifiant  aller à l'état 20
    commande     aller à l'état 21


État 22

    4 variables: variables LOCAL '{' . '$' variabledef '$' '}'

    '$'  décalage et aller à l'état 33


État 23

   16 identifiant: ID '_' . '{' expression '}'
   17            | ID '_' . '{' expression ',' expression '}'

    '{'  décalage et aller à l'état 34


État 24

   23 commande: IF '{' . '$' conditions '$' '}' '{' commandes '}'

    '$'  décalage et aller à l'état 35


État 25

   24 commande: EIF '{' . '$' conditions '$' '}' '{' commandes '}' '{' commandes '}'

    '$'  décalage et aller à l'état 36


État 26

   25 commande: WHILE '{' . '$' conditions '$' '}' '{' commandes '}'

    '$'  décalage et aller à l'état 37


État 27

   26 commande: FOR '{' . identifiant TO '$' expression '$' '}' '{' commandes '}'

    ID   décalage et aller à l'état 12
    '$'  décalage et aller à l'état 38

    identifiant  aller à l'état 39


État 28

   12 identifiant: '$' ID . LEFTARROW expression '$'
   13            | '$' ID . '_' '{' expression '}' LEFTARROW expression '$'
   14            | '$' ID . '_' '{' expression ',' expression '}' LEFTARROW expression '$'

    LEFTARROW  décalage et aller à l'état 40
    '_'        décalage et aller à l'état 41


État 29

   19 commande: '$' MBOX . '{' PRINT '(' '$' expression '$' ')' '}' '$' '\\' ';'
   20         | '$' MBOX . '{' PRINTTEXT '(' '$' STRING '$' ')' '}' '$' '\\' ';'
   21         | '$' MBOX . '{' PRINTLN '(' ')' '}' '$' '\\' ';'

    '{'  décalage et aller à l'état 42


État 30

    3 algorithm: TEXSCI_BEGIN '{' ID '}' variables BLANKLINE commandes TEXSCI_END .

    $défaut  réduction par utilisation de la règle 3 (algorithm)


État 31

   18 commande: identifiant '\\' . ';'

    ';'  décalage et aller à l'état 43


État 32

   10 commandes: commande commandes .

    $défaut  réduction par utilisation de la règle 10 (commandes)


État 33

    4 variables: variables LOCAL '{' '$' . variabledef '$' '}'

    ID  décalage et aller à l'état 44

    variabledef  aller à l'état 45


État 34

   16 identifiant: ID '_' '{' . expression '}'
   17            | ID '_' '{' . expression ',' expression '}'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 48

    identifiant  aller à l'état 49
    expression   aller à l'état 50


État 35

   23 commande: IF '{' '$' . conditions '$' '}' '{' commandes '}'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    NON    décalage et aller à l'état 51
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 52

    identifiant  aller à l'état 49
    expression   aller à l'état 53
    conditions   aller à l'état 54
    condition    aller à l'état 55


État 36

   24 commande: EIF '{' '$' . conditions '$' '}' '{' commandes '}' '{' commandes '}'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    NON    décalage et aller à l'état 51
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 52

    identifiant  aller à l'état 49
    expression   aller à l'état 53
    conditions   aller à l'état 56
    condition    aller à l'état 55


État 37

   25 commande: WHILE '{' '$' . conditions '$' '}' '{' commandes '}'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    NON    décalage et aller à l'état 51
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 52

    identifiant  aller à l'état 49
    expression   aller à l'état 53
    conditions   aller à l'état 57
    condition    aller à l'état 55


État 38

   12 identifiant: '$' . ID LEFTARROW expression '$'
   13            | '$' . ID '_' '{' expression '}' LEFTARROW expression '$'
   14            | '$' . ID '_' '{' expression ',' expression '}' LEFTARROW expression '$'

    ID  décalage et aller à l'état 28


État 39

   26 commande: FOR '{' identifiant . TO '$' expression '$' '}' '{' commandes '}'

    TO  décalage et aller à l'état 58


État 40

   12 identifiant: '$' ID LEFTARROW . expression '$'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 48

    identifiant  aller à l'état 49
    expression   aller à l'état 59


État 41

   13 identifiant: '$' ID '_' . '{' expression '}' LEFTARROW expression '$'
   14            | '$' ID '_' . '{' expression ',' expression '}' LEFTARROW expression '$'

    '{'  décalage et aller à l'état 60


État 42

   19 commande: '$' MBOX '{' . PRINT '(' '$' expression '$' ')' '}' '$' '\\' ';'
   20         | '$' MBOX '{' . PRINTTEXT '(' '$' STRING '$' ')' '}' '$' '\\' ';'
   21         | '$' MBOX '{' . PRINTLN '(' ')' '}' '$' '\\' ';'

    PRINT      décalage et aller à l'état 61
    PRINTTEXT  décalage et aller à l'état 62
    PRINTLN    décalage et aller à l'état 63


État 43

   18 commande: identifiant '\\' ';' .

    $défaut  réduction par utilisation de la règle 18 (commande)


État 44

    6 variabledef: ID . IN INTEGER
    8            | ID . IN INTEGER '^' '{' INT '}'
    9            | ID . IN INTEGER '^' '{' INT MULT INT '}'

    IN  décalage et aller à l'état 64


État 45

    4 variables: variables LOCAL '{' '$' variabledef . '$' '}'
    7 variabledef: variabledef . ',' ID IN INTEGER

    '$'  décalage et aller à l'état 65
    ','  décalage et aller à l'état 66


État 46

   27 expression: INT .

    $défaut  réduction par utilisation de la règle 27 (expression)


État 47

   31 expression: MINUS . expression

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 48

    identifiant  aller à l'état 49
    expression   aller à l'état 67


État 48

   33 expression: '(' . expression ')'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 48

    identifiant  aller à l'état 49
    expression   aller à l'état 68


État 49

   28 expression: identifiant .

    $défaut  réduction par utilisation de la règle 28 (expression)


État 50

   16 identifiant: ID '_' '{' expression . '}'
   17            | ID '_' '{' expression . ',' expression '}'
   29 expression: expression . PLUS expression
   30           | expression . MINUS expression
   32           | expression . MULT expression

    MULT   décalage et aller à l'état 69
    PLUS   décalage et aller à l'état 70
    MINUS  décalage et aller à l'état 71
    '}'    décalage et aller à l'état 72
    ','    décalage et aller à l'état 73


État 51

   36 conditions: NON . conditions

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    NON    décalage et aller à l'état 51
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 52

    identifiant  aller à l'état 49
    expression   aller à l'état 53
    conditions   aller à l'état 74
    condition    aller à l'état 55


État 52

   33 expression: '(' . expression ')'
   35 conditions: '(' . conditions ')'

    ID     décalage et aller à l'état 12
    INT    décalage et aller à l'état 46
    MINUS  décalage et aller à l'état 47
    NON    décalage et aller à l'état 51
    '$'    décalage et aller à l'état 38
    '('    décalage et aller à l'état 52

    identifiant  aller à l'état 49
    expression   aller à l'état 75
    conditions   aller à l'état 76
    condition    aller à l'état 55


État 53

   29 expression: expression . PLUS expression
   30           | expression . MINUS expression
   32           | expression . MULT expression
   39 condition: expression .
   40          | expression . '=' expression
   41          | expression . PLUSGRAND expression
   42          | expression . PLUSPETIT expression
   43          | expression . PLUSGRANDEG expression
   44          | expression . PLUSPETITEG expression

    MULT         décalage et aller à l'état 69
    PLUS         décalage et aller à l'état 70
    MINUS        décalage et aller à l'état 71
    PLUSGRAND    décalage et aller à l'état 77
    PLUSPETIT    décalage et aller à l'état 78
    PLUSGRANDEG  décalage et aller à l'état 79
    PLUSPETITEG  décalage et aller à l'état 80
    '='          décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 39 (condition)


État 54

   23 commande: IF '{' '$' conditions . '$' '}' '{' commandes '}'
   37 conditions: conditions . ET conditions
   38           | conditions . OU conditions

    ET   décalage et aller à l'état 82
    OU   décalage et aller à l'état 83
    '$'  décalage et aller à l'état 84


État 55

   34 conditions: condition .

    $défaut  réduction par utilisation de la règle 34 (conditions)


État 56
